--- a/pages/books-sub-pages/book1.html
+++ b/pages/books-sub-pages/book1.html
@@ -8,7 +8,7 @@
 <body>
     <h1>A Little Life</h1>
     <p>Written by Hanya Yanagihara</p>
-    <a href="https://en.wikipedia.org/wiki/A_Little_Life">click here to read more about the book</a><br>
+    <a href="https://en.wikipedia.org/wiki/A_Little_Life" target="_blank">click here to read more about the book</a><br>
     <img src="./images/book1.jpg" alt="Book 1 Cover"><br>
     <a href="../books.html">back</a>
 </body>
