--- a/pages/books-sub-pages/book3.html
+++ b/pages/books-sub-pages/book3.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Bunny</h1>
     <p>Written by Mona Awad</p>
-    <a href="https://en.wikipedia.org/wiki/Mona_Awad">click here to read more about the book</a><br>
+    <a href="https://en.wikipedia.org/wiki/Mona_Awad" target="_blank">click here to read more about the book</a><br>
     <img src="./images/book3.jpg" alt="Book 3 Cover"><br>
     <a href="../books.html">back</a>
 </body>
