--- a/pages/books-sub-pages/book4.html
+++ b/pages/books-sub-pages/book4.html
@@ -8,7 +8,7 @@
 <body>
     <h1>To the Paradise</h1>
     <p>Written by Hanya Yanagihara</p>
-    <a href="https://en.wikipedia.org/wiki/To_Paradise">click here to read more about the book</a><br>
+    <a href="https://en.wikipedia.org/wiki/To_Paradise" target="_blank">click here to read more about the book</a><br>
     <img src="./images/book4.jpg" alt="Book 4 Cover"><br>
     <a href="../books.html">back</a>
 </body>
