--- a/pages/books-sub-pages/book5.html
+++ b/pages/books-sub-pages/book5.html
@@ -8,7 +8,7 @@
 <body>
     <h1>The bell jar</h1>
     <p>Written by Sylvia Plath</p>
-    <a href="https://en.wikipedia.org/wiki/The_Bell_Jar">click here to read more about the book</a><br>
+    <a href="https://en.wikipedia.org/wiki/The_Bell_Jar" target="_blank">click here to read more about the book</a><br>
     <img src="./images/book5.jpg" alt="Book 5 Cover"><br>
     <a href="../books.html">back</a>
 </body>
