--- a/pages/books-sub-pages/book3.html
+++ b/pages/books-sub-pages/book3.html
@@ -9,7 +9,7 @@
     <h1>Bunny</h1>
     <p>Written by Mona Awad</p>
     <a href="https://en.wikipedia.org/wiki/Mona_Awad" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book3.jpg" alt="Book 3 Cover"><br>
+    <img src="./images/book3.jpg" alt="Book 3 Cover" width="200" height="300"><br>
     <a href="../books.html">back</a>
 </body>
 </html>
