--- a/pages/movies-sub-pages/movie5.html
+++ b/pages/movies-sub-pages/movie5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Perfume: The Story of a Murderer</h1>
-    <img src="https://i.pinimg.com/564x/e0/8a/f6/e08af6a3bb528dc9b161fd1ade5ca32f.jpg" alt="movie5"><br>
+    <img src="https://i.pinimg.com/564x/e0/8a/f6/e08af6a3bb528dc9b161fd1ade5ca32f.jpg" alt="movie5" width="200" height="300"><br>
     <a href="../movies.html">back</a>
 </body>
 </html>
