--- a/pages/movies-sub-pages/movie1.html
+++ b/pages/movies-sub-pages/movie1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Eternal Sunshine of the Spotless Mind</h1>
-    <img src="https://i.pinimg.com/564x/17/26/b6/1726b6a5518a3c2ec04da544f38fecfb.jpg" alt="movie1"><br>
+    <img src="https://i.pinimg.com/564x/17/26/b6/1726b6a5518a3c2ec04da544f38fecfb.jpg" alt="movie1" width="200" height="300"><br>
     <a href="../movies.html">back</a>
 </body>
 </html>
