--- a/pages/movies-sub-pages/movie2.html
+++ b/pages/movies-sub-pages/movie2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Close</h1>
-    <img src="https://i.pinimg.com/564x/ee/a6/5a/eea65a3d6e3d3ce96b0dc330f46ab577.jpg" alt="movie2" width="200" height="300"><br>
+    <img src="https://i.pinimg.com/564x/ee/a6/5a/eea65a3d6e3d3ce96b0dc330f46ab577.jpg" alt="the movie Close" width="200" height="300"><br>
     <a href="../movies.html">back</a>
 </body>
 </html>
