--- a/pages/movies-sub-pages/movie4.html
+++ b/pages/movies-sub-pages/movie4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Gone Girl</h1>
-    <img src="https://i.pinimg.com/564x/07/26/ba/0726ba618e509ecb7b0f494d483441c6.jpg" alt="movie4" width="200" height="300"><br>
+    <img src="https://i.pinimg.com/564x/07/26/ba/0726ba618e509ecb7b0f494d483441c6.jpg" alt="the movie Gone Girl" width="200" height="300"><br>
     <a href="../movies.html">back</a>
 </body>
 </html>
