--- a/pages/books-sub-pages/book2.html
+++ b/pages/books-sub-pages/book2.html
@@ -9,7 +9,7 @@
     <h1>The perks of being a wallflower</h1>
     <p>Written by Stephen Chbosky</p>
     <a href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book2.jpg" alt="Book 2 Cover" width="200" height="300"><br>
+    <img src="./images/book2.jpg" alt="the The perks of being a wallflower book" width="200" height="300"><br>
     <a href="../books.html">back</a>
 </body>
 </html>
