--- a/pages/books-sub-pages/book4.html
+++ b/pages/books-sub-pages/book4.html
@@ -9,7 +9,7 @@
     <h1>To the Paradise</h1>
     <p>Written by Hanya Yanagihara</p>
     <a href="https://en.wikipedia.org/wiki/To_Paradise" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book4.jpg" alt="Book 4 Cover" width="200" height="300"><br>
+    <img src="./images/book4.jpg" alt="the to paradise book" width="200" height="300"><br>
     <a href="../books.html">back</a>
 </body>
 </html>
