Spray a bit design

--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Menu</h1>
-    <p>Click on the item to explore more</p>
-    <ul>
-        <a href="./pages/hobbies.html"><li>Hobbies</li></a>
-        <a href="./pages/movies.html"><li>Movies</li></a>
-        <a href="./pages/books.html"><li>Books</li></a>
-    </ul>
-    <img src="https://i.pinimg.com/564x/c1/73/4e/c1734e77c7a5bd9d4f94ea0160db9dc0.jpg" alt="sad"></img>
+    <header>
+        <h1 style="color: #333D29; font-size: 48px;">Menu</h1>
+        <p>Click on the item to explore more</p>
+    </header>
+    <main>
+        <section class="menu-container">
+            <ul>
+                <a href="./pages/hobbies.html"><li>Hobbies</li></a>
+                <a href="./pages/movies.html"><li>Movies</li></a>
+                <a href="./pages/books.html"><li>Books</li></a>
+            </ul>
+        </section>
+        <!-- <img src="https://i.pinimg.com/564x/c1/73/4e/c1734e77c7a5bd9d4f94ea0160db9dc0.jpg" alt="sad"></img> -->
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
