--- a/pages/books.html
+++ b/pages/books.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Books</title>
 </head>
 <body>
-    <a href="../index.html">back</a>
-    <h1>My favorite books</h1>
-    <ol>
-        <a href="./books-sub-pages/book1.html"><li>A Little life</li></a>
-        <a href="./books-sub-pages/book2.html"><li>The perks of being a wallflower</li></a>
-        <a href="./books-sub-pages/book3.html"><li>Bunny</li></a>
-        <a href="./books-sub-pages/book4.html"><li>To the Paradise</li></a>
-        <a href="./books-sub-pages/book5.html"><li>The bell jar</li></a>
-    </ol>
+    <header>
+        <span class="back-spn"><a href="../index.html" class="back-btn">back</a></span>
+        <h1>My favorite books</h1>
+    </header>
+    <main>
+        <section class="list-container">
+            <ol>
+                <a href="./books-sub-pages/book1.html"><li>A Little life</li></a>
+                <a href="./books-sub-pages/book2.html"><li>The perks of being a wallflower</li></a>
+                <a href="./books-sub-pages/book3.html"><li>Bunny</li></a>
+                <a href="./books-sub-pages/book4.html"><li>To the Paradise</li></a>
+                <a href="./books-sub-pages/book5.html"><li>The bell jar</li></a>
+            </ol>
+        </section>
+    </main>
 </body>
 </html>
