--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Hobbies</title>
 </head>
 <body>
-    <a href="../index.html">back</a>
-    <h1>My Hobbies</h1>
-    <ol>
-        <a href="../pages/books.html"><li>Reading Books</li></a>
-        <li>Coding</li>
-        <li>Going to the gym</li>
-        <a href="../pages/hobbies-sub-pages/hobby3.html"><li>Play video games</li></a>
-        <li>Photography</li>
-    </ol>
+    <header>
+        <span class="back-spn"><a href="../index.html" class="back-btn">back</a></span>
+        <h1>My Hobbies</h1>
+    </header>
+    <main>
+        <section class="list-container">
+            <ol>
+                <a href="../pages/books.html"><li>Reading Books</li></a>
+                <li>Coding</li>
+                <li>Going to the gym</li>
+                <a href="../pages/hobbies-sub-pages/hobby3.html"><li>Play video games</li></a>
+                <li>Photography</li>
+            </ol>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
