--- a/pages/movies.html
+++ b/pages/movies.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Movies</title>
 </head>
 <body>
-    <a href="../index.html">back</a>
-    <h1>My favorite movies</h1>
-    <ol>
-        <a href="./movies-sub-pages/movie1.html"><li>Eternal Sunshine of the spotless mind</li></a>
-        <a href="./movies-sub-pages/movie2.html"><li>Close</li></a>
-        <a href="./movies-sub-pages/movie3.html"><li>Mr. Popper's Penguins</li></a>
-        <a href="./movies-sub-pages/movie4.html"><li>Gone Girl</li></a>
-        <a href="./movies-sub-pages/movie5.html"><li>Perfume: The Story of a Murderer</li></a>
-    </ol>
+    <header>
+        <span class="back-spn"><a href="../index.html" class="back-btn">back</a></span>
+        <h1 style="color: #333D29; font-size: 48px;">My favorite movies</h1>
+    </header>
+    <main>
+        <section class="list-container">
+            <ol>
+                <a href="./movies-sub-pages/movie1.html"><li>Eternal Sunshine of the spotless mind</li></a>
+                <a href="./movies-sub-pages/movie2.html"><li>Close</li></a>
+                <a href="./movies-sub-pages/movie3.html"><li>Mr. Popper's Penguins</li></a>
+                <a href="./movies-sub-pages/movie4.html"><li>Gone Girl</li></a>
+                <a href="./movies-sub-pages/movie5.html"><li>Perfume: The Story of a Murderer</li></a>
+            </ol>
+        </section>
+    </main>
 </body>
 </html>
