--- a/pages/books-sub-pages/book1.html
+++ b/pages/books-sub-pages/book1.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>A little life</title>
 </head>
 <body>
-    <a href="../books.html">back</a>
-    <h1>A Little Life</h1>
-    <p>Written by Hanya Yanagihara</p>
-    <a href="https://en.wikipedia.org/wiki/A_Little_Life" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book1.jpg" alt="the a little life book" width="200" height="300"><br>
+    <header>
+        <span class="back-spn"><a href="../books.html"  class="back-btn">back</a></span>
+    </header>
+    <main class="add-info-container">
+        <h1>A Little Life</h1>
+        <p>Written by Hanya Yanagihara</p>
+        <a href="https://en.wikipedia.org/wiki/A_Little_Life" target="_blank">click here to read more about the book</a><br>
+        <img src="./images/book1.jpg" alt="the a little life book" width="200" height="300"><br>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
