--- a/pages/books-sub-pages/book5.html
+++ b/pages/books-sub-pages/book5.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>The bell jar</title>
 </head>
 <body>
-    <a href="../books.html">back</a>
-    <h1>The bell jar</h1>
-    <p>Written by Sylvia Plath</p>
-    <a href="https://en.wikipedia.org/wiki/The_Bell_Jar" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book5.jpg" alt="the the bell jar book" width="200" height="300"><br>
+    <header>
+        <span class="back-spn"><a href="../books.html"  class="back-btn">back</a></span>
+    </header>
+    <main class="add-info-container">
+        <h1>The bell jar</h1>
+        <p>Written by Sylvia Plath</p>
+        <a href="https://en.wikipedia.org/wiki/The_Bell_Jar" target="_blank">click here to read more about the book</a><br>
+        <img src="./images/book5.jpg" alt="the the bell jar book" width="200" height="300"><br>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
