--- a/pages/hobbies-sub-pages/hobby3.html
+++ b/pages/hobbies-sub-pages/hobby3.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Video Games</title>
 </head>
 <body>
-    <a href="../hobbies.html">back</a>
-    <h1>My favorite video games</h1>
-    <ol>
-        <li>Minecraft</li>
-        <li>Dota 2</li>
-        <li>Lethal Company</li>
-    </ol>
+    <header>
+        <span class="back-spn"><a href="../hobbies.html" class="back-btn">back</a></span>
+    </header>
+    <main class="add-info-container">
+        <h1>My favorite video games</h1>
+        <ol>
+            <li>Minecraft</li>
+            <li>Dota 2</li>
+            <li>Lethal Company</li>
+        </ol>
+    </main>
+    <footer></footer>
 </body>
 </html>
