--- a/pages/books-sub-pages/book2.html
+++ b/pages/books-sub-pages/book2.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>The perks of being a wallflower</title>
 </head>
 <body>
-    <a href="../books.html">back</a>
-    <h1>The perks of being a wallflower</h1>
-    <p>Written by Stephen Chbosky</p>
-    <a href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book2.jpg" alt="the The perks of being a wallflower book" width="200" height="300"><br>
+    <header>
+        <span class="back-spn"><a href="../books.html"  class="back-btn">back</a></span>
+    </header>
+    <main class="add-info-container">
+        <h1>The perks of being a wallflower</h1>
+        <p>Written by Stephen Chbosky</p>
+        <a href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">click here to read more about the book</a><br>
+        <img src="./images/book2.jpg" alt="the The perks of being a wallflower book" width="200" height="300"><br>
+    </main>
+    <footer></footer>
 </body>
 </html>
