--- a/pages/books-sub-pages/book4.html
+++ b/pages/books-sub-pages/book4.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>To Paradise</title>
 </head>
 <body>
-    <a href="../books.html">back</a>
-    <h1>To the Paradise</h1>
-    <p>Written by Hanya Yanagihara</p>
-    <a href="https://en.wikipedia.org/wiki/To_Paradise" target="_blank">click here to read more about the book</a><br>
-    <img src="./images/book4.jpg" alt="the to paradise book" width="200" height="300"><br>
-</body>
+    <header>
+        <span class="back-spn"><a href="../books.html"  class="back-btn">back</a></span>
+    </header>
+    <main class="add-info-container">
+        <h1>To the Paradise</h1>
+        <p>Written by Hanya Yanagihara</p>
+        <a href="https://en.wikipedia.org/wiki/To_Paradise" target="_blank">click here to read more about the book</a><br>
+        <img src="./images/book4.jpg" alt="the to paradise book" width="200" height="300"><br>
+    </main>
+    <footer></footer>
+    </body>
 </html>
